[workspace]
members = ["il2cpp_global_metadata", "il2cpp_elf"]

[package]
name = "brocolib"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
il2cpp_global_metadata = { path = "./il2cpp_global_metadata" }
il2cpp_elf = { path = "./il2cpp_elf" }
