[package]
name = "brocolib"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
binde = { git = "https://github.com/StackDoubleFlow/binde" }
bad64 = "0.9"
byteorder = "1.4"
object = "0.36"
binread = "2.2"
