[package]
name = "il2cpp_binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bad64 = "0.6"
byteorder = "1.4"
object = "0.29"
thiserror = "1"
binread = "2.2"
il2cpp_metadata_raw = { path = "../il2cpp_metadata_raw" }
