[package]
name = "il2cpp_global_metadata"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.15"
thiserror = "1"
binde = { git = "https://github.com/StackDoubleFlow/binde" }
